fixed: fixed everything

--- a/index.html
+++ b/index.html
@@ -148,7 +148,9 @@
                 asperiores fugiat corporis deleniti, dolorum eaque saepe quod.
                 Quam, delectus a?
               </p>
-              <a href="#" class="methods__button">Подробнее</a>
+              <a href="method-grp_sat.html" class="methods__button"
+                >Подробнее</a
+              >
             </div>
           </div>
           <div class="swiper-slide methods-slide">
@@ -215,8 +217,9 @@
             class="geography__map-container geography__map-container--yamburg"
           >
             <div class="geography__map-modal">
+              <p class="geography__text">Ямало-Ненецкий АО</p>
               <h3 class="geography__modal-title">
-                УГРиЛМ ООО "Газпром добыча Ямбург"
+                УГРиЛМ&nbsp;ООО&nbsp;"Газпром&nbsp;добыча&nbsp;Ямбург"
               </h3>
             </div>
             <a href="#" class="geography__map-link">
@@ -232,8 +235,9 @@
             class="geography__map-container geography__map-container--zapolarka"
           >
             <div class="geography__map-modal">
+              <p class="geography__text">Тазовский полуостров</p>
               <h3 class="geography__modal-title">
-                УГРиЛМ ООО "Газпром добыча Ямбург"
+                УГРиЛМ&nbsp;ООО&nbsp;"Газпром&nbsp;добыча&nbsp;Ямбург"
               </h3>
             </div>
             <a href="#" class="geography__map-link">
@@ -249,7 +253,8 @@
             class="geography__map-container geography__map-container--sahalin"
           >
             <div class="geography__map-modal">
-              <h3 class="geography__modal-title">ООО "Роснефть"</h3>
+              <p class="geography__text">Сахалинская область</p>
+              <h3 class="geography__modal-title">ООО "НПП Геодинамика"</h3>
             </div>
             <a href="#" class="geography__map-link">
               <img
@@ -264,6 +269,7 @@
             class="geography__map-container geography__map-container--tatarstan"
           >
             <div class="geography__map-modal">
+              <p class="geography__text">Республика Татарстан</p>
               <h3 class="geography__modal-title">ООО "УК Шешмаойл"</h3>
             </div>
             <a href="#" class="geography__map-link">
@@ -278,6 +284,7 @@
             class="geography__map-container geography__map-container--orenburg"
           >
             <div class="geography__map-modal">
+              <p class="geography__text">Оренбургская область</p>
               <h3 class="geography__modal-title">ООО "Байтекс"</h3>
             </div>
             <a href="#" class="geography__map-link">
@@ -293,6 +300,7 @@
             class="geography__map-container geography__map-container--samara"
           >
             <div class="geography__map-modal">
+              <p class="geography__text">Самарская область</p>
               <h3 class="geography__modal-title">ООО "Резонанс"</h3>
             </div>
             <a href="#" class="geography__map-link">
@@ -308,7 +316,25 @@
             class="geography__map-container geography__map-container--neneckiy"
           >
             <div class="geography__map-modal">
+              <p class="geography__text">Ненецкий АО</p>
               <h3 class="geography__modal-title">ООО "ЛУКОЙЛ-Коми"</h3>
+            </div>
+            <a href="#" class="geography__map-link">
+              <img
+                src="img/geography-map-icon.svg "
+                class="geography__map-icon"
+                alt=" "
+              />
+            </a>
+          </div>
+
+          <div class="geography__map-container geography__map-container--komi">
+            <div class="geography__map-modal">
+              <p class="geography__text">Республика Коми</p>
+              <h3 class="geography__modal-title">
+                ООО&nbsp;"НПП&nbsp;Нефтяные&nbsp;горизонты" <br />
+                ООО "ЛУКОЙЛ-Коми"
+              </h3>
             </div>
             <a href="#" class="geography__map-link">
               <img
