--- a/method-svan.html
+++ b/method-svan.html
@@ -88,6 +88,187 @@
     </nav>
     <!-- /.breadcrumb-->
 
+    <section class="method-msi">
+      <div class="method-msi__container">
+        <h3 class="method-msi__title">Метод СВАН</h3>
+        <p class="method-msi__text">
+          Технология микросейсмических исследований (МСИ) является
+          разновидностью пассивной сейсморазведки, в зарубежной литературе она
+          описывается как Low Frequency Passive Seismic Technology. Последняя,
+          как метод геофизического исследования, зародилась относительно
+          недавно, когда специалистами ВНИИГеосистем и РАО «Газпром» были
+          проведены первые опытные работы по изучению структуры
+          микросейсмических сигналов на Братском газоконденсатном месторождении.
+          Над залежью углеводородов они наблюдали аномалию в спектре
+          сейсмического сигнала в области 3 Гц, при этом за пределами контура
+          нефтегазоносности залежи аномалия отсутствовала. Этот впечатляющий
+          результат свидетельствовал о принципиальной возможности использования
+          данного явления для прямых поисков залежей нефти и газа.
+        </p>
+        <div class="method-msi__image-wrapper">
+          <img src="img/msi-method__1.png" alt="" />
+          <img src="img/msi-method__2.png" alt="" />
+        </div>
+        <span class="method-msi__comment"
+          >Сравнение модельных спектров со спектрами реальных скважин</span
+        >
+        <p class="method-msi__text">
+          Природа микросейсм разнообразна, но в их составе имеются
+          <a
+            class="method-msi__link"
+            target="_blank"
+            href="https://ru.wikipedia.org/wiki/%D0%A1%D1%82%D0%BE%D1%8F%D1%87%D0%B0%D1%8F_%D0%B2%D0%BE%D0%BB%D0%BD%D0%B0"
+            >стоячие волны</a
+          >
+          , формирующиеся по причине существования интерференции волн,
+          многократно отраженных на контрастных границах среды. Стоячая волна
+          возникает при отражениях от преград и неоднородностей в результате
+          наложения отражённой волны на падающую. Таким образом, в слоистой
+          геологической среде формируются многократные отражения внутри слоев, и
+          их интерференция приводит к формированию стоячих волн.
+        </p>
+        <div class="method-msi__image-wrapper">
+          <img class="method-msi__gif" src="img/Standing_wave_2.gif" alt="" />
+        </div>
+        <span class="method-msi__comment"
+          >Пример стоячей волны (черная линия)</span
+        >
+        <p class="method-msi__text">
+          Использование результатов моделирования, априорных данных о
+          месторождении и анализ реальных записей микросейсмического волнового
+          поля дают возможность построения карт энергии микросейсмической
+          эмиссии для каждого продуктивного пласта, которые по сути отражают
+          потенциал нефтенасыщенности. Микросейсмические исследования (МСИ) –
+          это усовершенствованный вариант пассивной сейсмики, разработанный
+          специалистами нашей компании. В 2010 г. получен патент на данную
+          технологию (патент на изобретение № 2386984).
+        </p>
+
+        <ul class="method-msi__list">
+          <h4 class="method-msi__list-title">Решаемые задачи</h4>
+          <li class="method-msi__item">
+            определение зон с высокой плотностью активных запасов и зон со
+            слабо-дренируемыми запасами нефти;
+          </li>
+          <li class="method-msi__item">
+            детализация геологического строения и фильтрационно-емкостных
+            свойств пласта краевых зон залежи для оценки перспектив и
+            целесообразности бурения проектных скважин
+          </li>
+        </ul>
+
+        <div class="method-msi__results">
+          <h4 class="method-msi__list-title">Результаты</h4>
+          <div class="swiper-container">
+            <!-- Additional required wrapper -->
+            <div class="swiper-wrapper method-msi__wrapper">
+              <!-- Slides -->
+              <div class="swiper-slide method-msi__slide">
+                <div class="method-msi__images">
+                  <img
+                    class="method-msi__image"
+                    src="img/msi-method__swiper-L.png"
+                    alt=""
+                  />
+                </div>
+                <div class="method-msi__text-wrapper">
+                  <h4 class="method-msi__text-title">
+                    Карта энергии микросейсмического волнового поля для пласта L
+                  </h4>
+                  <p class="method-msi__description">
+                    На карте распределения энергий по пласту L центральная часть
+                    Южно-Дагинской локальной тектонической зоны соответствует
+                    повышенным значениям энергий. Данная зона располагается в
+                    области между разломами 3, 4 и 6 северо-восточного
+                    простирания. В пределах максимальных значений находятся
+                    продуктивные скв. SD4 и SD12, в которых при опробовании
+                    пластов получены притоки УВ. В юго-восточной части
+                    месторождения повышенные значения энергий в антиклинальной
+                    тектонической Катанглийской зоне делится 11 разрывным
+                    нарушением на две части. Западная часть соответствует залежи
+                    Е.
+                  </p>
+                </div>
+              </div>
+              <div class="swiper-slide method-msi__slide">
+                <div class="method-msi__images">
+                  <img
+                    class="method-msi__image"
+                    src="img/msi-method__swiper-III.png"
+                    alt=""
+                  />
+                </div>
+                <div class="method-msi__text-wrapper">
+                  <h4 class="method-msi__text-title">
+                    Карта энергии микросейсмического волнового поля для пласта
+                    III, IV
+                  </h4>
+                  <p class="method-msi__description">
+                    Пласт III вскрыт всеми скважинами, кроме скважины SD 5, в
+                    которой он выпадает из разреза за счет тектонического
+                    нарушения. В центральной части Южно-Дагинской тектонической
+                    локальной зоны, на карте распределения энергий по пласту III
+                    наблюдаются повышенные значения, что коррелируется с
+                    нефтеносностью по скв SD4.
+                  </p>
+                </div>
+              </div>
+              <div class="swiper-slide method-msi__slide">
+                <div class="method-msi__images">
+                  <img
+                    class="method-msi__image"
+                    src="img/msi-method__swiper-XI.png"
+                    alt=""
+                  />
+                </div>
+                <div class="method-msi__text-wrapper">
+                  <h4 class="method-msi__text-title">
+                    Карта энергии микросейсмического волнового поля для пласта
+                    XI, XII
+                  </h4>
+                  <p class="method-msi__description">
+                    Распределение значений энергий по пласту XI носит
+                    дифференцированный характер – выделяются две области
+                    повышенных и пониженных значений энергий. Зона повышенных
+                    значений имеет неправильную форму и располагается в
+                    центральной и южной части участка исследований МСИ.
+                  </p>
+                </div>
+              </div>
+              <div class="swiper-slide method-msi__slide">
+                <div class="method-msi__images">
+                  <img
+                    class="method-msi__image"
+                    src="img/msi-method__swiper-XXIII.png"
+                    alt=""
+                  />
+                </div>
+                <div class="method-msi__text-wrapper">
+                  <h4 class="method-msi__text-title">
+                    Карта энергии микросейсмического волнового поля для пластов
+                    XXIII, XXIV
+                  </h4>
+                  <p class="method-msi__description">
+                    Распределение значений энергий по пласту XXIII
+                    неравномерное. Достаточно контрастно выделяются две зоны –
+                    локальные области повышенных значений энергий,
+                    располагающиеся в центральной и южной частях участка работ
+                    МСИ.
+                  </p>
+                </div>
+              </div>
+            </div>
+
+            <!-- If we need navigation buttons -->
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Slider main container -->
+    </section>
+
     <footer class="footer">
       <div class="footer-container">
         <div class="footer__menu">
@@ -177,8 +358,8 @@
       <nav class="mobile__nav">
         <a href="index.html" class="mobile__link">Главная</a>
         <a href="about-company.html" class="mobile__link">О компании</a>
-        <a href="method-msi.html" class="mobile__link">Наши технологии</a>
-        <a href="# " class="mobile__link">Контакты</a>
+        <a href="technologies.html" class="mobile__link">Наши технологии</a>
+        <a href="contacts.html" class="mobile__link">Контакты</a>
       </nav>
     </div>
 
