fixed: added content

--- a/about-company.html
+++ b/about-company.html
@@ -46,13 +46,15 @@
                 >Наши технологии</a
               >
               <div class="dropdown">
-                <a href="#" class="dropdown__link"
+                <a href="method-grp_sat.html" class="dropdown__link"
                   >Мониторинг СЭТ на малых площадях</a
                 >
-                <a href="#" class="dropdown__link"
+                <a href="method-nat.html" class="dropdown__link"
                   >Мониторинг естественной трещиноватости</a
                 >
-                <a href="#" class="dropdown__link">Мониторинг СВАН</a>
+                <a href="method-svan.html" class="dropdown__link"
+                  >Мониторинг СВАН</a
+                >
               </div>
             </li>
 
@@ -116,8 +118,8 @@
             ООО «СИГМА» — ведущая компания в области сейсморазведки на суше и в
             транзитной зоне, оказывающая услуги клиентам во всех основных
             нефтегазоносных областях Российской Федерации (Западная и Восточная
-            Сибирь, Тимано-Печорская и Волго-Уральская провинции) и в Республике
-            Казахстан. <br />
+            Сибирь, Тимано-Печорская и Волго-Уральская провинции) и на острове
+            Сахалин. <br />
             <br />
             Компания является системообразующим предприятием для геологической
             отрасли России и вносит значительный вклад в реализацию
