--- a/contacts.html
+++ b/contacts.html
@@ -1,31 +1,39 @@
 <!DOCTYPE html>
 <html lang="ru">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Связаться с нами</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@600;700&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito:wght@600;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap"
+      rel="stylesheet"
+    />
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
     <link rel="icon" href="img/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="css/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/style.css" />
-</head>
+  </head>
 
-<body>
+  <body>
     <header class="header">
-        <div class="header-container">
-            <a href="index.html" class="header__link">
-                <img class="header__logo" src="img/logo-blue.svg" alt="logo" />
-            </a>
+      <div class="header-container">
+        <a href="index.html" class="header__link">
+          <img class="header__logo" src="img/logo-blue.svg" alt="logo" />
+        </a>
 
-             <nav class="navbar">
+        <nav class="navbar">
           <ul class="navbar__list">
             <li class="navbar__item">
               <a href="index.html" class="navbar__link">Главная</a>
@@ -38,13 +46,15 @@
                 >Наши технологии</a
               >
               <div class="dropdown">
-                <a href="#" class="dropdown__link"
+                <a href="method-grp_sat.html" class="dropdown__link"
                   >Мониторинг СЭТ на малых площадях</a
                 >
-                <a href="#" class="dropdown__link"
+                <a href="method-nat.html" class="dropdown__link"
                   >Мониторинг естественной трещиноватости</a
                 >
-                <a href="#" class="dropdown__link">Мониторинг СВАН</a>
+                <a href="method-svan.html" class="dropdown__link"
+                  >Мониторинг СВАН</a
+                >
               </div>
             </li>
 
@@ -54,23 +64,24 @@
           </ul>
         </nav>
 
-            <button class="menu-button">
+        <button class="menu-button">
           <span class="menu-button__line"></span>
           <span class="menu-button__line"></span>
           <span class="menu-button__line"></span>
         </button>
-        </div>
+      </div>
     </header>
     <!--.header-->
 
     <nav class="breadcrumb">
-        <div class="breadcrumb-container">
-            <ul class="breadcrumb-list">
-                <li class="breadcrumb-list__item">
-                    <a href="index.html" class="breadcrumb-list__link">Главная</a>
-                </li>
-                <li class="breadcrumb-list__item">
-                    <a href="about-company.html" class="breadcrumb-list__link">Контакты</a
+      <div class="breadcrumb-container">
+        <ul class="breadcrumb-list">
+          <li class="breadcrumb-list__item">
+            <a href="index.html" class="breadcrumb-list__link">Главная</a>
+          </li>
+          <li class="breadcrumb-list__item">
+            <a href="about-company.html" class="breadcrumb-list__link"
+              >Контакты</a
             >
           </li>
         </ul>
@@ -170,7 +181,7 @@
               <a href="# " class="footer__info footer__info--link">
                 <img class="footer__logo" src="img/logo-white.svg " alt=" " />
               </a>
-                    <span class="footer__text">
+              <span class="footer__text">
                 ООО "СИГМА " — геофизическая компания, специализирующаяся на
                 проведении комплекса сервисных работ для нефтегазодобывающих
                 компаний.</span
