--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
                 >Наши технологии</a
               >
               <div class="dropdown">
-                <a href="#" class="dropdown__link"
+                <a href="method-grp_sat.html" class="dropdown__link"
                   >Мониторинг СЭТ на малых площадях</a
                 >
-                <a href="#" class="dropdown__link"
+                <a href="method-nat.html" class="dropdown__link"
                   >Мониторинг естественной трещиноватости</a
                 >
                 <a href="method-svan.html" class="dropdown__link"
@@ -133,7 +133,7 @@
           <!-- Slides -->
           <div class="swiper-slide methods-slide">
             <div class="methods__image-wrapper">
-              <img src="img/methods.png" alt="" />
+              <img class="methods__image" src="img/method-sat-grp.png" alt="" />
             </div>
             <div class="methods__text-wrapper">
               <h4 class="methods__text-title">
@@ -155,7 +155,7 @@
           </div>
           <div class="swiper-slide methods-slide">
             <div class="methods__image-wrapper">
-              <img src="img/methods.png" alt="" />
+              <img class="methods__image" src="img/method-est.png" alt="" />
             </div>
             <div class="methods__text-wrapper">
               <h4 class="methods__text-title">
@@ -175,7 +175,7 @@
           </div>
           <div class="swiper-slide methods-slide">
             <div class="methods__image-wrapper">
-              <img src="img/methods.png" alt="" />
+              <img class="methods__image" src="img/method-svan.png" alt="" />
             </div>
             <div class="methods__text-wrapper">
               <h4 class="methods__text-title">Мониторинг СВАН</h4>
@@ -194,12 +194,12 @@
           </div>
         </div>
 
-        <!-- If we need pagination
-        <div class="swiper-pagination"></div> -->
+        <!-- If we need pagination -->
+        <div class="swiper-pagination"></div>
 
-        If we need navigation buttons
+        <!-- If we need navigation buttons
         <div class="swiper-button-prev"></div>
-        <div class="swiper-button-next"></div>
+        <div class="swiper-button-next"></div> -->
 
         <!-- If we need scrollbar -->
         <!-- <div class="swiper-scrollbar"></div> -->
