--- a/method-svan.html
+++ b/method-svan.html
@@ -46,13 +46,15 @@
                 >Наши технологии</a
               >
               <div class="dropdown">
-                <a href="#" class="dropdown__link"
+                <a href="method-grp_sat.html" class="dropdown__link"
                   >Мониторинг СЭТ на малых площадях</a
                 >
-                <a href="#" class="dropdown__link"
+                <a href="method-nat.html" class="dropdown__link"
                   >Мониторинг естественной трещиноватости</a
                 >
-                <a href="#" class="dropdown__link">Мониторинг СВАН</a>
+                <a href="method-svan.html" class="dropdown__link"
+                  >Мониторинг СВАН</a
+                >
               </div>
             </li>
 
@@ -176,17 +178,13 @@
                     Карта энергии микросейсмического волнового поля для пласта L
                   </h4>
                   <p class="method-msi__description">
-                    На карте распределения энергий по пласту L центральная часть
-                    Южно-Дагинской локальной тектонической зоны соответствует
-                    повышенным значениям энергий. Данная зона располагается в
-                    области между разломами 3, 4 и 6 северо-восточного
-                    простирания. В пределах максимальных значений находятся
-                    продуктивные скв. SD4 и SD12, в которых при опробовании
-                    пластов получены притоки УВ. В юго-восточной части
-                    месторождения повышенные значения энергий в антиклинальной
-                    тектонической Катанглийской зоне делится 11 разрывным
-                    нарушением на две части. Западная часть соответствует залежи
-                    Е.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Autem vitae consequuntur, dolorum, est distinctio
+                    accusantium voluptas neque quas quae alias magni odio
+                    corporis at delectus hic dolores repellat, ab voluptate
+                    explicabo recusandae! Reiciendis id sequi recusandae beatae
+                    nesciunt quis rem aut velit voluptatem veniam ab nemo quod,
+                    fugit impedit inventore!
                   </p>
                 </div>
               </div>
@@ -204,12 +202,13 @@
                     III, IV
                   </h4>
                   <p class="method-msi__description">
-                    Пласт III вскрыт всеми скважинами, кроме скважины SD 5, в
-                    которой он выпадает из разреза за счет тектонического
-                    нарушения. В центральной части Южно-Дагинской тектонической
-                    локальной зоны, на карте распределения энергий по пласту III
-                    наблюдаются повышенные значения, что коррелируется с
-                    нефтеносностью по скв SD4.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Autem vitae consequuntur, dolorum, est distinctio
+                    accusantium voluptas neque quas quae alias magni odio
+                    corporis at delectus hic dolores repellat, ab voluptate
+                    explicabo recusandae! Reiciendis id sequi recusandae beatae
+                    nesciunt quis rem aut velit voluptatem veniam ab nemo quod,
+                    fugit impedit inventore!
                   </p>
                 </div>
               </div>
@@ -227,11 +226,13 @@
                     XI, XII
                   </h4>
                   <p class="method-msi__description">
-                    Распределение значений энергий по пласту XI носит
-                    дифференцированный характер – выделяются две области
-                    повышенных и пониженных значений энергий. Зона повышенных
-                    значений имеет неправильную форму и располагается в
-                    центральной и южной части участка исследований МСИ.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Autem vitae consequuntur, dolorum, est distinctio
+                    accusantium voluptas neque quas quae alias magni odio
+                    corporis at delectus hic dolores repellat, ab voluptate
+                    explicabo recusandae! Reiciendis id sequi recusandae beatae
+                    nesciunt quis rem aut velit voluptatem veniam ab nemo quod,
+                    fugit impedit inventore!
                   </p>
                 </div>
               </div>
@@ -249,19 +250,24 @@
                     XXIII, XXIV
                   </h4>
                   <p class="method-msi__description">
-                    Распределение значений энергий по пласту XXIII
-                    неравномерное. Достаточно контрастно выделяются две зоны –
-                    локальные области повышенных значений энергий,
-                    располагающиеся в центральной и южной частях участка работ
-                    МСИ.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Autem vitae consequuntur, dolorum, est distinctio
+                    accusantium voluptas neque quas quae alias magni odio
+                    corporis at delectus hic dolores repellat, ab voluptate
+                    explicabo recusandae! Reiciendis id sequi recusandae beatae
+                    nesciunt quis rem aut velit voluptatem veniam ab nemo quod,
+                    fugit impedit inventore!
                   </p>
                 </div>
               </div>
             </div>
 
-            <!-- If we need navigation buttons -->
+            <!-- If we need navigation buttons
             <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div>
+            <div class="swiper-button-next"></div> -->
+
+            <!-- If we need pagination -->
+            <div class="swiper-pagination"></div>
           </div>
         </div>
       </div>
