--- a/technologies.html
+++ b/technologies.html
@@ -46,13 +46,15 @@
                 >Наши технологии</a
               >
               <div class="dropdown">
-                <a href="#" class="dropdown__link"
+                <a href="method-grp_sat.html" class="dropdown__link"
                   >Мониторинг СЭТ на малых площадях</a
                 >
-                <a href="#" class="dropdown__link"
+                <a href="method-nat.html" class="dropdown__link"
                   >Мониторинг естественной трещиноватости</a
                 >
-                <a href="#" class="dropdown__link">Мониторинг СВАН</a>
+                <a href="method-svan.html" class="dropdown__link"
+                  >Мониторинг СВАН</a
+                >
               </div>
             </li>
 
@@ -98,7 +100,7 @@
             alt=""
           />
         </div>
-        <p class="technologies__text">
+        <p class="technologies__text technologies__text--center">
           ООО "СИГМА" предоставляет полный комплекс геологоразведочных услуг,
           обусловленный независимым вкладом 3 составляющих факторов:
         </p>
@@ -107,18 +109,24 @@
             Полевые сейсмические работы
           </h5>
           <p class="technologies__text">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aperiam,
-            error dolor consequuntur ullam eveniet recusandae hic fuga. Odit
-            dicta velit veritatis a eligendi culpa officiis quasi beatae,
-            dolorem at, quae cum corporis non esse. Neque adipisci praesentium,
-            culpa inventore vero blanditiis commodi in impedit possimus tempora?
-            Hic, dolore fugit, illo cumque deserunt quasi inventore incidunt
-            minus accusamus pariatur minima sunt iste iure. Quaerat quibusdam
-            labore veritatis voluptate distinctio enim excepturi a accusamus
-            modi provident. Esse tempora, voluptate ut doloremque odit optio id
-            nostrum nam rerum! Culpa nobis maiores, mollitia voluptate ducimus
-            consequatur voluptates corporis, magni sapiente, in dignissimos nemo
-            aperiam!
+            Наше подразделение полевых сейсмических работ занимается сбором
+            сейсморазведочных данных на суше и в транзитной зоне, для чего
+            используется целый комплекс источников сейсмических сигналов и
+            исследований. Наши мобильные сейсмопартии работают в каждой из
+            основных нефтегазоносных провинций России, в том числе в Западной и
+            Восточной Сибири, в Тимано-Печорской и Волго-Уральской провинциях, а
+            также в Казахстане, Узбекистане. <br />
+            <br />
+
+            Большинство геологических задач решается при проведении сейсмических
+            работ. Важно отметить, что на данный момент в России фактически все
+            оборудование, используемое в данных исследованиях, является
+            разработкой зарубежных производителей. Поэтому создание сейсмических
+            комплексов отечественного производства, не уступающего по своим
+            техническим характеристикам зарубежным аналогам, является важным
+            направлением в области геофизики и изучение недр. Нашей компанией
+            был разработан автономный сейсмический комплекс, не уступающий по
+            характеристикам современным зарубежным аналогам.
           </p>
           <div class="technologies__images-wrapper">
             <div class="technologies__image-wrapper">
