--- a/method-nat.html
+++ b/method-nat.html
@@ -46,13 +46,15 @@
                 >Наши технологии</a
               >
               <div class="dropdown">
-                <a href="#" class="dropdown__link"
+                <a href="method-grp_sat.html" class="dropdown__link"
                   >Мониторинг СЭТ на малых площадях</a
                 >
-                <a href="#" class="dropdown__link"
+                <a href="method-nat.html" class="dropdown__link"
                   >Мониторинг естественной трещиноватости</a
                 >
-                <a href="#" class="dropdown__link">Мониторинг СВАН</a>
+                <a href="method-svan.html" class="dropdown__link"
+                  >Мониторинг СВАН</a
+                >
               </div>
             </li>
 
